<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>comau_c5gopen_ros2</name>
  <version>0.0.0</version>
  <description>ROS 2HW Interface for COMAU C5GOpen controller</description>
  <maintainer email="enrico.villagrossi@cnr.it">enricovillagrossi</maintainer>
  <license>BSD3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>rcpputils</depend>
  <depend>hardware_interface</depend>
  <depend>cnr_mqtt_client</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
